--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^4.3.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
     "koa": "^2.13.0",
@@ -43,6 +44,15 @@
   },
   "devDependencies": {
     "@types/node": "^14.11.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "typescript": "^4.0.3"
   }
 }
