--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "koa-router": "^8.0.8",
     "koa-session": "^6.0.0",
     "mongoose": "^5.10.6",
-    "next": "^9.5.3",
+    "next": "^9.5.5",
+    "next-images": "^1.6.0",
     "next-transpile-modules": "^4.1.0",
     "prismjs": "^1.21.0",
     "react": "^16.13.1",
